feature-argoworkflow/manifests/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-argo-to-default-gateway
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ${argo_namespace}
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
